# chatterbox

./: example_for_mac.py  pyproject.toml  vietnamese-support-plan.md
src/chatterbox/: mtl_tts.py  tts.py  vc.py
src/chatterbox/models/s3gen/matcha/: transformer.py
src/chatterbox/models/t3/: llama_configs.py  t3.py
src/chatterbox/models/t3/modules/: perceiver.py
src/chatterbox/models/tokenizers/: vietnamese.py
